--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
 
     <div class="container-fluid" ng-cloak>
       
-      <tabs class="xxx">
+      <tabs>
         <tab ng-repeat="truc in trucs" title="Tab {{ truc }}" active="$index == 0">
           <p>Contenu : {{ truc }} biffle.</p>
         </tab>
