--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <script src="/static/jquery/dist/jquery.js"></script>
     <script src="/static/angular/angular.js"></script>
     <script src="/static/angular-animate/angular-animate.js"></script>
+    <script src="/static/angular-route/angular-route.js"></script>
     <script src="/js/navbar.js"></script>
     <script src="/js/tabs.js"></script>
     <script src="/js/app.js"></script>
@@ -38,7 +39,7 @@
   </head>
   <body>
     
-    <tt-navbar title="'This is me'"></tt-navbar>
+    <tt-navbar title="This is me, {{ 6 + 5 }}"></tt-navbar>
 
     <div class="container-fluid" ng-cloak>
       
