Intégration de la librairie flot pour tracer de jolis graphes dynamiquement

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
             <li ng-class="{ active: isActive('/graphs') }"><a href="#/graphs">Graphes</a></li>
             <li ng-class="{ active: isActive('/events') }"><a href="#/events">Events</a></li>
             <li ng-class="{ active: isActive('/d3') }"><a href="#/d3">D3</a></li>
+            <li ng-class="{ active: isActive('/flot') }"><a href="#/flot">Flot</a></li>
           </ul>
         </div>
 
