--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <script src="/js/tabs.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/d3.js"></script>
+    <script src="/js/flot.js"></script>
     <style>
     
     ul#events {
