--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,7 @@
     <script src="/static/angular-route/angular-route.js"></script>
     <script src="/static/flot/jquery.flot.js"></script>
     <script src="/static/d3/d3.js"></script>
-    <script src="/js/tabs.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/d3.js"></script>
-    <script src="/js/flot.js"></script>
+    <script src="/js/app.min.js"></script>
     <style>
     
     ul#events {
