--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
             <li ng-class="{ active: isActive('/events') }"><a href="#/events">Events</a></li>
             <li ng-class="{ active: isActive('/d3') }"><a href="#/d3">D3</a></li>
             <li ng-class="{ active: isActive('/flot') }"><a href="#/flot">Flot</a></li>
+            <li ng-class="{ active: isActive('/resize') }"><a href="#/resize">Resize</a></li>
           </ul>
         </div>
 
