Balise racine pour les templates (pour htmlmin), titre pour expliquer l'exemple

--- a/app/pages/d3.html
+++ b/app/pages/d3.html
@@ -1,2 +1,8 @@
-<p><button class="btn btn-default" ng-click="addNumber()">Ajouter un nombre</button><p>
-<d3 data="data" update="updateMe"></d3>
+<div>
+  
+  <h1>Intégration de D3</h1>
+
+  <p><button class="btn btn-default" ng-click="addNumber()">Ajouter un nombre</button><p>
+  <d3 data="data" update="updateMe"></d3>
+
+</div>
