--- a/app/pages/events.html
+++ b/app/pages/events.html
@@ -1,5 +1,7 @@
 <div ng-controller="EventController">
 
+  <h1>Evénements inter-scopes Angular</h1>
+
   <p><button class="btn btn-default" ng-click="add()">Ajouter un événement</button><p>
   <p><button class="btn btn-default" ng-click="remove()">Supprimer un événement</button><p>
 
