--- a/app/pages/resize.html
+++ b/app/pages/resize.html
@@ -1,11 +1,13 @@
 <div>
+  
+  <h1>Evénements DOM</h1>
 
-<h2>Resize</h2>
+  <h2>Resize</h2>
 
-<pre ng-controller="EventController" window-resize="logEvent($event); event = $event">{{ event|json }}</pre>
+  <pre ng-controller="EventController" window-resize="logEvent($event); event = $event">{{ event|json }}</pre>
 
-<h2>Click</h2>
+  <h2>Click</h2>
 
-<p ng-controller="EventController"><button class="btn btn-default" ng-click="logEvent($event)">Cliquer ici</button></p>
+  <p ng-controller="EventController"><button class="btn btn-default" ng-click="logEvent($event)">Cliquer ici</button></p>
 
 </div>
