--- a/app/pages/home.html
+++ b/app/pages/home.html
@@ -1,24 +1,30 @@
-<h1>Salut, {{ 'Mon pote' }} !</h1>
-<p>Petit calcul : 1 + 2 = {{ 1 + 2 }}</p>
+<div>
 
-<hr>
+  <h1>Accueil : expressions et formulaires</h1>
 
-<div ng-controller="SalutController">
+  <h2>Salut, {{ 'Mon pote' }} !</h2>
+  <p>Petit calcul : 1 + 2 = {{ 1 + 2 }}</p>
 
-  <p>
-    <form class="form-inline" role="form">
-      <div class="form-group">
-          <label class="sr-only" for="graph-name">Nom</label>
-          <input type="text" class="form-control" id="graph-name" placeholder="Nom" ng-model="name">
-      </div>
-      <div class="form-group">
-          <label class="sr-only" for="repliquat-name">Répliquat</label>
-          <input type="text" class="form-control" id="repliquat-name" ng-model="name">
-      </div>
-      <button class="btn btn-default" ng-click="alert(name)">OK</button>
-    </form>
-  </p>
+  <hr>
 
-  <p><b>Nom :</b> {{ name }}</p>
+  <div ng-controller="SalutController">
+
+    <p>
+      <form class="form-inline" role="form">
+        <div class="form-group">
+            <label class="sr-only" for="graph-name">Nom</label>
+            <input type="text" class="form-control" id="graph-name" placeholder="Nom" ng-model="name">
+        </div>
+        <div class="form-group">
+            <label class="sr-only" for="repliquat-name">Répliquat</label>
+            <input type="text" class="form-control" id="repliquat-name" ng-model="name">
+        </div>
+        <button class="btn btn-default" ng-click="alert(name)">OK</button>
+      </form>
+    </p>
+
+    <p><b>Nom :</b> {{ name }}</p>
+
+  </div>
 
 </div>
