--- a/app/pages/trucs.html
+++ b/app/pages/trucs.html
@@ -1,6 +1,12 @@
-<tabs>
-  <tab ng-repeat="truc in trucs" title="Tab {{ truc.num }}" active="$index === 0" disabled="truc.disabled">
-    <p>Contenu : truc n°{{ truc.num }}.</p>
-  </tab>
-</tabs>
-<p><button class="btn btn-default" ng-click="addTruc()">Ajouter un truc</button></p>
+<div>
+
+  <h1>Tabs avec Bootstrap</h1>
+
+  <tabs>
+    <tab ng-repeat="truc in trucs" title="Tab {{ truc.num }}" active="$index === 0" disabled="truc.disabled">
+      <p>Contenu : truc n°{{ truc.num }}.</p>
+    </tab>
+  </tabs>
+  <p><button class="btn btn-default" ng-click="addTruc()">Ajouter un truc</button></p>
+
+</div>
