Gestion de la pagination

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
             <li ng-class="{ active: isActive('/d3') }"><a href="#/d3">D3</a></li>
             <li ng-class="{ active: isActive('/flot') }"><a href="#/flot">Flot</a></li>
             <li ng-class="{ active: isActive('/resize') }"><a href="#/resize">Resize</a></li>
+            <li ng-class="{ active: isActive('/pagination') }"><a href="#/pagination">Pagination</a></li>
           </ul>
         </div>
 
