--- a/app/pages/pagination.html
+++ b/app/pages/pagination.html
@@ -2,4 +2,10 @@
 
   <h1>Pagination</h1>
   
+  <pagination current="1" last="3">
+    <page-selector></page-selector>
+    <hr>          
+    <page-selector></page-selector>
+  </pagination>
+  
 </div>
