--- a/app/pages/pagination.html
+++ b/app/pages/pagination.html
@@ -2,10 +2,8 @@
 
   <h1>Pagination</h1>
   
-  <pagination current="1" last="3">
-    <page-selector></page-selector>
-    <hr>          
-    <page-selector></page-selector>
-  </pagination>
+  <h2>Exemple <small>Page {{ currentPage }} / {{ maxPage }}</small></h2>
+  
+  <page-selector current="currentPage" max="maxPage" change-page="pageChanged(page)"></page-selector>
   
 </div>
