--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/static/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="/static/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
+    <link href="/styles/styles.min.css" rel="stylesheet">
     <script src="/static/jquery/dist/jquery.js"></script>
     <script src="/static/angular/angular.js"></script>
     <script src="/static/angular-animate/angular-animate.js"></script>
@@ -14,7 +15,6 @@
     <script src="/static/flot/jquery.flot.js"></script>
     <script src="/static/d3/d3.js"></script>
     <script src="/js/app.min.js"></script>
-    <link rel="stylesheet" href="/styles/styles.min.css">
   </head>
   <body>
     
