Renommage avec un nom de module plus approprié

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="fr" ng-app="dashboard">
+<html lang="fr">
   <head>
-    <title ng-bind="'Yihaaaaaaaaaaaa, Angular !'">Titre à remplir</title>
+    <title>Tests AngularJS</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
     <script src="/static/d3/d3.js"></script>
     <script src="/js/app.min.js"></script>
   </head>
-  <body>
+  <body ng-app="tests">
     
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="MainNavController">
       <div class="container-fluid">
