--- a/app/index.html
+++ b/app/index.html
@@ -28,19 +28,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Tests AngularJS</a>
+          <a class="navbar-brand" href="#!/home">Tests AngularJS</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ng-class="{ active: isActive('/home') }"><a href="#/home">Accueil</a></li>
-            <li ng-class="{ active: isActive('/trucs') }"><a href="#/trucs">Trucs</a></li>
-            <li ng-class="{ active: isActive('/graphs') }"><a href="#/graphs">Graphes</a></li>
-            <li ng-class="{ active: isActive('/events') }"><a href="#/events">Events</a></li>
-            <li ng-class="{ active: isActive('/d3') }"><a href="#/d3">D3</a></li>
-            <li ng-class="{ active: isActive('/flot') }"><a href="#/flot">Flot</a></li>
-            <li ng-class="{ active: isActive('/resize') }"><a href="#/resize">Resize</a></li>
-            <li ng-class="{ active: isActive('/pagination') }"><a href="#/pagination">Pagination</a></li>
+            <li ng-class="{ active: isActive('/home') }"><a href="#!/home">Accueil</a></li>
+            <li ng-class="{ active: isActive('/trucs') }"><a href="#!/trucs">Trucs</a></li>
+            <li ng-class="{ active: isActive('/graphs') }"><a href="#!/graphs">Graphes</a></li>
+            <li ng-class="{ active: isActive('/events') }"><a href="#!/events">Events</a></li>
+            <li ng-class="{ active: isActive('/d3') }"><a href="#!/d3">D3</a></li>
+            <li ng-class="{ active: isActive('/flot') }"><a href="#!/flot">Flot</a></li>
+            <li ng-class="{ active: isActive('/resize') }"><a href="#!/resize">Resize</a></li>
+            <li ng-class="{ active: isActive('/pagination') }"><a href="#!/pagination">Pagination</a></li>
           </ul>
         </div>
 
