--- a/app/pages/tree.html
+++ b/app/pages/tree.html
@@ -14,10 +14,26 @@
         <call-tree var-name="arbre" value="item.children"></call-tree>
       </li>
     </ul>
-  </div tree>
+  </div>
   
   <hr>
 
   <pre>{{ arbre | json }}</pre>
-
+  
+  <hr>
+  
+  <div tree>
+    <ul>
+      <li ng-repeat="item in arbre">
+        <p>
+          <input ng-model="item.name">
+          {{ x }}
+          <button ng-click="arbre.splice($index, 1)">DELETE</button>
+          <button ng-click="addChild(item)">ADD CHILD</button>
+        </p>
+        <call-tree var-name="arbre" value="item.children"></call-tree>
+      </li>
+    </ul>
+  </div>
+  
 </div>
