Utilisation des frameworks minifiés

--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/styles/styles.min.css" rel="stylesheet">
-    <script src="/static/jquery/dist/jquery.js"></script>
-    <script src="/static/angular/angular.js"></script>
-    <script src="/static/angular-animate/angular-animate.js"></script>
-    <script src="/static/angular-route/angular-route.js"></script>
+    <script src="/static/jquery/dist/jquery.min.js"></script>
+    <script src="/static/angular/angular.min.js"></script>
+    <script src="/static/angular-animate/angular-animate.min.js"></script>
+    <script src="/static/angular-route/angular-route.min.js"></script>
     <script src="/static/flot/jquery.flot.js"></script>
-    <script src="/static/d3/d3.js"></script>
+    <script src="/static/d3/d3.min.js"></script>
     <script src="/js/app.min.js"></script>
   </head>
   <body ng-app="tests">
@@ -56,6 +56,6 @@
       
     </div>
       
-    <script src="/static/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
