--- a/app/pages/form.html
+++ b/app/pages/form.html
@@ -1,14 +1,14 @@
 <div>
   <h1>Formulaires</h1>
   
-  <form novalidate>
+  <form novalidate name="testForm">
   
     <div class="form-group">
       <label for="email">Adresse email</label>
       <input type="email" required class="form-control" id="email" ng-model="email">
     </div>
     <button type="submit" class="btn btn-primary">Envoyer</button>
-    <button type="reset" class="btn btn-default">Réinitialiser</button>
+    <button type="reset" class="btn btn-default" ng-click="testForm.$setPristine()">Réinitialiser</button>
     
   </form>
   
