--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   </head>
   <body ng-app="tests">
     
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="MainNavController">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="MainNavController" ng-cloak>
       <div class="container-fluid">
 
         <div class="navbar-header">
