--- a/app/index.html
+++ b/app/index.html
@@ -31,17 +31,17 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ng-repeat="page in ::pages" ng-switch="page.group" ng-class="{ active: isActive(page), dropdown: page.group }">
-                <a ng-switch-when="true" class="dropdown-toggle" data-toggle="dropdown">
+            <li ng-repeat="page in ::pages" ng-class="{ active: isActive(page), dropdown: page.group }">
+                <a class="dropdown-toggle" data-toggle="dropdown" ng-if="page.group">
                   {{ ::page.name }}
                   <span class="caret" ng-if="page.group"></span>
                 </a>
-                <a ng-switch-default ng-href="#!{{ ::page.url }}">
+                <a ng-href="#!{{ ::page.url }}" ng-if="!page.group">
                   {{ ::page.name }}
                 </a>
                 <ul class="dropdown-menu" role="menu" ng-if="page.group">
                   <li ng-repeat="subPage in ::page.subPages" ng-class="{ active: isActive(subPage) }">
-                    <a ng-href="#!{{ ::subPage.url }}">{{ subPage.name }}</a>
+                    <a ng-href="#!{{ ::subPage.url }}">{{ ::subPage.name }}</a>
                   </li>
                 </ul>
             </li>
