--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <script src="/static/angular/angular.min.js"></script>
     <script src="/static/angular-animate/angular-animate.min.js"></script>
     <script src="/static/angular-route/angular-route.min.js"></script>
+    <script src="/static/angular-resource/angular-resource.min.js"></script>
     <script src="/static/flot/jquery.flot.js"></script>
     <script src="/static/d3/d3.min.js"></script>
     <script src="/static/moment/min/moment-with-locales.min.js"></script>
