--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,11 @@
     <script src="/static/angular-animate/angular-animate.min.js"></script>
     <script src="/static/angular-route/angular-route.min.js"></script>
     <script src="/static/angular-resource/angular-resource.min.js"></script>
+    <script src="/static/ng-file-upload/angular-file-upload.min.js"></script>
     <script src="/static/flot/jquery.flot.js"></script>
     <script src="/static/d3/d3.min.js"></script>
     <script src="/static/moment/min/moment-with-locales.min.js"></script>
-    <script src="/js/app.min.js"></script>
+    <script src="/js/app.js"></script>
   </head>
   <body ng-app="tests">
     
